force-app/force-app/force-app/main/default/objects/Executive_Rating__c/Executive_Rating__c.object-meta.xml
<CustomObject>
    <label>Executive Rating</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Executive Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>