force-app/force-app/force-app/main/default/objects/Executive_Rating__c/fields/Customer_Satisfaction_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Index__c</fullName>
    <label>Customer Satisfaction Index</label>
    <referenceTo>Customer_Satisfaction_Index__c</referenceTo>
    <relationshipLabel>Executive Ratings</relationshipLabel>
    <relationshipName>Executive_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>