force-app/force-app/force-app/main/default/objects/Executive_Rating__c/fields/Executive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Executive_Feedback__c</fullName>
    <label>Executive Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>