force-app/force-app/force-app/main/default/objects/Executive_Rating__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>