force-app/force-app/force-app/main/default/objects/Executive_Rating__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Peformance</fullName>
            </value>
            <value>
                <fullName>Aesthetics</fullName>
            </value>
            <value>
                <fullName>Fitment</fullName>
            </value>
            <value>
                <fullName>Dimension</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timely Delivery</fullName>
            </value>
            <value>
                <fullName>Ease to access personal</fullName>
            </value>
            <value>
                <fullName>Timely Response to communication</fullName>
            </value>
            <value>
                <fullName>Timely attn to prod/Serv complaint</fullName>
            </value>
            <value>
                <fullName>PO acknow &amp; tmely Commit</fullName>
            </value>
            <value>
                <fullName>Version Diffrn.</fullName>
            </value>
            <value>
                <fullName>Stencil / Size marking</fullName>
            </value>
            <value>
                <fullName>Inadequate technical info</fullName>
            </value>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>On time Deivery Intimation</fullName>
            </value>
            <value>
                <fullName>Courier Service</fullName>
            </value>
            <value>
                <fullName>Transport Service</fullName>
            </value>
            <value>
                <fullName>QC Report</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Customer Grading</fullName>
            </value>
            <value>
                <fullName>Total Indl tyre solutions</fullName>
            </value>
            <value>
                <fullName>Import substitute</fullName>
            </value>
            <value>
                <fullName>Tyre-Wheel assembly</fullName>
            </value>
            <value>
                <fullName>Fitment Solution</fullName>
            </value>
            <value>
                <fullName>Customised solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>