force-app/force-app/force-app/main/default/objects/Executive_Rating__c/fields/RCA__c.field-meta.xml
<CustomField>
    <fullName>RCA__c</fullName>
    <label>RCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>