force-app/force-app/force-app/main/default/objects/Executive_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Satisfaction_Index__c</columns>
    <columns>Grade__c</columns>
    <columns>Rating__c</columns>
    <columns>Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>